--- a/src/app/sort/sort.component.html
+++ b/src/app/sort/sort.component.html
@@ -1,9 +1,17 @@
 <div *ngIf="editorService.dataBank.length > 0" cdkDropList class="example-list" (cdkDropListDropped)="editorService.drop($event)">
-  <mat-list role="list" class="list" *ngFor="let item of editorService.dataBank; let i = index" cdkDrag>
-    <mat-list-item [matTooltip]="item.body" role="listitem">{{item.title}} - {{item.source}}</mat-list-item>
-    <div style="display: flex; flex-direction: row; margin: auto">
-      <button mat-flat-button style="margin: 5px; padding: 5px;" color="primary" (click)="edit(i, item)">Update</button>
-      <button mat-flat-button style="margin: 5px;" color="warn" (click)="delete(i, item)">Clear Data</button>
-    </div>
-  </mat-list>
+    <mat-list style="width:100%; word-wrap:break-word;" role="list" class="list" *ngFor="let item of editorService.dataBank; let i = index"
+        cdkDrag>
+        <mat-list-item [matTooltip]="item.body" role="listitem">
+            <div mat-line>
+                Rank: {{item.rank}}. {{item.title}}
+            </div>
+            <div mat-line>
+                {{item.source}}
+            </div>
+            <div style="display: flex; flex-direction: row; margin: auto">
+                <button mat-flat-button style="margin: 5px; padding: 5px;" color="primary" (click)="edit(i, item)">Update</button>
+                <button mat-flat-button style="margin: 5px;" color="warn" (click)="delete(i, item)">Clear Data</button>
+            </div>
+        </mat-list-item>
+    </mat-list>
 </div>
