--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -21,7 +21,7 @@
       <mat-label>source</mat-label>
       <input type="url" formControlName="source" matInput>
     </mat-form-field>
-    <div appearance="fill" *ngIf="editorForm.value['source'] === 'Vientiane Times'">
+    <div appearance="fill">
       <mat-checkbox formControlName="paywall">Paywall</mat-checkbox>
     </div>
   </form>
